--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,29 @@
+
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+client/node_modules/
+server/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
 # ignore ALL .log files
 *.log
 
-# ignore ALL files in ANY directory named temp
-temp/
+# production
+/build
 
-# ignore all node modules
-client/node_modules/
-server/node_modules
-
-.vscode
-
+# misc
 .DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
